services/media/qbittorrent/resources/service-vpn-http-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-http-proxy
spec:
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  type: ClusterIP
  ports:
    - name: http-proxy
      protocol: TCP
      port: 8080
      targetPort: http-proxy
