services/media/qbittorrent/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  type: ClusterIP
  ports:
    - name: webui
      protocol: TCP
      port: 80
      targetPort: webui
