services/media/qbittorrent/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: intranet-dns01-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "from rules"
      secretName: "qbittorrent-tls"
  rules:
    - host: "qbittorrent.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: webui
