services/media/qbittorrent/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Requests from ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
              app.kubernetes.io/instance: traefik
      ports:
        - protocol: TCP
          port: webui
    # Requests from servarr services which use qBittorrent
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: sonarr
              app.kubernetes.io/name: sonarr
      ports:
        - protocol: TCP
          port: webui
    # Requests from services using http-proxy
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: bazarr
              app.kubernetes.io/name: bazarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: prowlarr
              app.kubernetes.io/name: prowlarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: radarr
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: sonarr
              app.kubernetes.io/name: sonarr
      ports:
        - protocol: TCP
          port: http-proxy

  egress:
    # ProtonVPN US servers
    # curl https://raw.githubusercontent.com/qdm12/gluetun/v3.41.1/internal/storage/servers.json | yq --yaml-output '.protonvpn.servers | map(select(.country == "United States" and .vpn == "wireguard" and .port_forward).ips[]) | sort | map({ipBlock: {cidr: (. + "/32")}}) | [{to: .}]'
    - ports:
        - protocol: UDP
          port: 51820
      to:
        - ipBlock:
            cidr: 104.234.212.26/32
        - ipBlock:
            cidr: 138.199.50.150/32
        - ipBlock:
            cidr: 143.244.44.186/32
        - ipBlock:
            cidr: 146.70.147.114/32
        - ipBlock:
            cidr: 146.70.156.2/32
        - ipBlock:
            cidr: 146.70.174.82/32
        - ipBlock:
            cidr: 146.70.183.130/32
        - ipBlock:
            cidr: 146.70.195.98/32
        - ipBlock:
            cidr: 146.70.202.130/32
        - ipBlock:
            cidr: 146.70.202.146/32
        - ipBlock:
            cidr: 146.70.202.18/32
        - ipBlock:
            cidr: 146.70.202.50/32
        - ipBlock:
            cidr: 146.70.217.66/32
        - ipBlock:
            cidr: 146.70.45.226/32
        - ipBlock:
            cidr: 146.70.72.130/32
        - ipBlock:
            cidr: 146.70.8.2/32
        - ipBlock:
            cidr: 146.70.84.2/32
        - ipBlock:
            cidr: 149.34.251.133/32
        - ipBlock:
            cidr: 149.34.251.135/32
        - ipBlock:
            cidr: 149.34.251.137/32
        - ipBlock:
            cidr: 149.40.51.225/32
        - ipBlock:
            cidr: 149.40.51.226/32
        - ipBlock:
            cidr: 149.40.51.229/32
        - ipBlock:
            cidr: 149.40.51.233/32
        - ipBlock:
            cidr: 151.243.141.4/32
        - ipBlock:
            cidr: 151.243.141.5/32
        - ipBlock:
            cidr: 156.146.54.97/32
        - ipBlock:
            cidr: 163.5.171.2/32
        - ipBlock:
            cidr: 163.5.171.83/32
        - ipBlock:
            cidr: 185.156.46.33/32
        - ipBlock:
            cidr: 185.247.68.50/32
        - ipBlock:
            cidr: 193.37.254.178/32
        - ipBlock:
            cidr: 193.37.254.66/32
        - ipBlock:
            cidr: 205.142.240.210/32
        - ipBlock:
            cidr: 212.102.44.161/32
        - ipBlock:
            cidr: 217.138.198.246/32
        - ipBlock:
            cidr: 37.19.200.26/32
        - ipBlock:
            cidr: 45.87.214.18/32
        - ipBlock:
            cidr: 62.93.176.130/32
        - ipBlock:
            cidr: 62.93.176.131/32
        - ipBlock:
            cidr: 68.169.42.225/32
        - ipBlock:
            cidr: 68.169.42.239/32
        - ipBlock:
            cidr: 68.169.42.240/32
        - ipBlock:
            cidr: 68.169.42.241/32
        - ipBlock:
            cidr: 68.169.42.242/32
        - ipBlock:
            cidr: 72.14.148.2/32
        - ipBlock:
            cidr: 72.14.148.25/32
        - ipBlock:
            cidr: 79.127.136.193/32
        - ipBlock:
            cidr: 79.127.136.222/32
        - ipBlock:
            cidr: 79.127.136.46/32
        - ipBlock:
            cidr: 79.127.136.65/32
        - ipBlock:
            cidr: 79.127.147.1/32
        - ipBlock:
            cidr: 79.127.147.2/32
        - ipBlock:
            cidr: 79.127.147.3/32
        - ipBlock:
            cidr: 79.127.160.158/32
        - ipBlock:
            cidr: 79.127.160.187/32
        - ipBlock:
            cidr: 79.127.160.216/32
        - ipBlock:
            cidr: 79.127.160.244/32
        - ipBlock:
            cidr: 79.127.185.162/32
        - ipBlock:
            cidr: 79.127.185.165/32
        - ipBlock:
            cidr: 79.127.185.166/32
        - ipBlock:
            cidr: 79.127.187.156/32
        - ipBlock:
            cidr: 79.127.187.185/32
        - ipBlock:
            cidr: 79.127.220.251/32
        - ipBlock:
            cidr: 84.17.63.54/32
        - ipBlock:
            cidr: 84.17.63.8/32
        - ipBlock:
            cidr: 89.187.170.135/32
        - ipBlock:
            cidr: 89.187.180.27/32
        - ipBlock:
            cidr: 89.222.100.65/32
        - ipBlock:
            cidr: 89.222.103.2/32
        - ipBlock:
            cidr: 89.222.103.6/32
        - ipBlock:
            cidr: 95.173.217.158/32
        - ipBlock:
            cidr: 95.173.217.187/32
        - ipBlock:
            cidr: 95.173.217.2/32
        - ipBlock:
            cidr: 95.173.217.216/32
        - ipBlock:
            cidr: 95.173.221.158/32
        - ipBlock:
            cidr: 95.173.221.187/32
        - ipBlock:
            cidr: 95.173.221.33/32
        - ipBlock:
            cidr: 95.173.221.92/32
